--- a/resources/css/tool.css
+++ b/resources/css/tool.css
@@ -1,4 +1,3 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -6,23 +5,31 @@
 .custom-scrollbar::-webkit-scrollbar {
   width: 8px;
 }
+
 .custom-scrollbar::-webkit-scrollbar-track {
-  background-color: rgba(0,0,0,0.05);
+  background-color: rgba(0, 0, 0, 0.05);
   border-radius: 4px;
 }
+
 .custom-scrollbar::-webkit-scrollbar-thumb {
   background-color: rgba(156, 163, 175, 0.5);
   border-radius: 4px;
 }
+
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: rgba(156, 163, 175, 0.7);
 }
-.card-detail-modal > div {
-  max-width: 1000px !important; /* or 1500px if you prefer */
-  width: 95vw !important;       /* responsive on smaller screens */  
+
+.card-detail-modal>div {
+  max-width: 1000px !important;
+  /* or 1500px if you prefer */
+  width: 95vw !important;
+  /* responsive on smaller screens */
 }
+
 .dark .CodeMirror-selected {
-  background-color: #f87171 !important; /* red-400 */
+  background-color: #f87171 !important;
+  /* red-400 */
 }
 
 .dark .CodeMirror-focused .CodeMirror-selected {
